Fix overflow-x bug

--- a/src/assets/css/main.css/main.css
+++ b/src/assets/css/main.css/main.css
@@ -157,14 +157,6 @@ body {
   /* Only works if the overflow element does not have position: absolute in relation to body. The parent element of the overflow should not be the body */
   overflow-x: hidden; }
 
-#root,
-#root > div {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch; }
-
 body {
   font-family: 'Rubik', sans-serif;
   line-height: 1;
@@ -692,7 +684,8 @@ strong {
   align-items: center;
   /* Sticky header so fixed height helps */
   height: 9.6rem;
-  padding: 0 4.8rem; }
+  padding: 0 4.8rem;
+  position: relative; }
 
 .logo {
   height: 3.2rem; }
